<?xml version="1.0"?>
<package format="3">
  <name>fadecandy_msgs</name>
  <version>1.0.1</version>
  <description>ROS msgs for fadecandy LED controllers</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>
  <maintainer email="venkatavaradhan93@gmail.com">Venkatavaradhan Vembanoor Lakshmi Narayanan</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <depend>std_msgs</depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
